8365633: Incorrect info is reported on hybrid CPU

Reviewed-by: kvn, dholmes